gtrainlovestory/css/styles.css
/* ... */
@-webkit-keyframes floating-arrow {
  from {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); }
  65% {
    -webkit-transform: translate(-50%, 15px);
            transform: translate(-50%, 15px); }
  to {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); } }

@keyframes floating-arrow {
  from {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); }
  65% {
    -webkit-transform: translate(-50%, 15px);
            transform: translate(-50%, 15px); }
  to {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); } }

.floating-logo {
  -webkit-animation-name: floating-logo;
          animation-name: floating-logo;
  -webkit-animation-duration: 2s;
          animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
          animation-timing-function: ease-in-out; }

@-webkit-keyframes floating-logo {
  from {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); }
  50% {
    -webkit-transform: translate(-50%, 10px);
            transform: translate(-50%, 10px); }
  to {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); } }

@keyframes floating-logo {
  from {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); }
  50% {
    -webkit-transform: translate(-50%, 10px);
            transform: translate(-50%, 10px); }
  to {
    -webkit-transform: translate(-50%, 0);
            transform: translate(-50%, 0); } }

/* ==========================================================================
Waypoinsts
========================================================================== */

.wp1, .wp2, .wp3, .wp4, .wp5, .wp6, .wp7, .wp8, .wp9 {
  visibility: hidden;
}

.wp2 {
  -webkit-animation-delay: 0.3s;
  animation-delay: 0.3s;
}

.bounceInLeft, .bounceInRight, .fadeIn, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
  visibility: visible;
}

/* ==========================================================================
Navigation
========================================================================== */

.header-nav.open {
  visibility: visible;
  opacity: 0.9;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.nav-toggle {
  position: absolute;
  top: 0;
  right: 15px;
  z-index: 999999;
  padding: 10px 35px 16px 0;
  cursor: pointer;
}

.nav-toggle:focus {
  outline: none;
}

.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  content: "";
  position: absolute;
  display: block;
  width: 35px;
  height: 3px;
  border-radius: 1px;
  background: #fff;
  cursor: pointer;
}

.nav-toggle span:before {
  top: -10px;
}

.nav-toggle span:after {
  bottom: -10px;
}

.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.nav-toggle.active span {
  background-color: transparent;
}

.nav-toggle.active span:before, .nav-toggle.active span:after {
  top: 0;
}

.nav-toggle.active span:before {
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.nav-toggle.active span:after {
  top: 10px;
  -ms-transform: translatey(-10px) rotate(-45deg);
  -webkit-transform: translatey(-10px) rotate(-45deg);
  transform: translatey(-10px) rotate(-45deg);
}

.navicon {
  position: absolute;
  height: 26px;
  right: 10px;
  top: 48px;
  visibility: hidden;
  -webkit-transition: all 300ms ease-in-out;
          transition: all 300ms ease-in-out;
}

/* ==========================================================================
Hero
========================================================================== */

.hero {
  min-height: 750px;
  background: url("../img/hero.jpg") center center;
  background-size: cover;
  position: relative; }
  .hero .down-arrow a {
    color: #fff; }
  .hero h1 {
    color: #fff;
    margin-bottom: 40px; }
  .hero p.intro {
    color: #fff;
    font-size: 28px;
    font-weight: 300;
    margin-bottom: 80px; }
  .hero .hero-content {
    padding-top: 26%; }

.navigation {
  -webkit-transition: all 300ms ease-in-out;
          transition: all 300ms ease-in-out;
  position: fixed;
  width: 100%;
  z-index: 999; }

.fixed {
  position: fixed;
  background-color: #232731;
  z-index: 999;
  width: 100%; }

header {
  padding: 50px 0;
  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
  position: relative;
  width: 1170px;
  margin: 0 auto;
  -webkit-transition: padding 300ms ease-in-out;
          transition: padding 300ms ease-in-out; }
  header a {
    color: #fff;
    text-transform: uppercase;
    font-size: 12px; }
    header a.login {
      margin-right: 20px; }
  header .logo {
    display: inline-block; }
  header ul.primary-nav {
    margin: 0 0 0 75px;
    padding: 0; }
    header ul.primary-nav li {
      display: inline; }
      header ul.primary-nav li a {
        color: #fff;
        padding-right: 25px; }
        header ul.primary-nav li a:hover {
          color: rgba(71, 228, 194, 1); }
      header ul.primary-nav li:last-child a {
        padding-right: 0px; }
  header ul.member-actions li {
    display: inline; }
    header ul.member-actions li a {
      color: #fff; }
      header ul.member-actions li a:hover {
        color: rgba(71, 228, 194, 1); }
  header .header-nav {
    display: inline-block; }
  header .member-actions {
    position: absolute;
    right: 0;
    top: 41px;
    -webkit-transition: all 300ms ease-in-out;
            transition: all 300ms ease-in-out; }

.down-arrow {
  color: #fff;
  font-size: 30px;
  position: absolute;
  bottom: 30px;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%); }
/* ... */

